# monmouth-svm-exex

./: .gitignore  AI_MODULES_SUMMARY.md  AdvancedVault.t.sol  CHANGELOG.md  Cargo.toml  Makefile  PHASE3_STATE_SYNC_SUMMARY.md  README.md  README_ENHANCED.md  TECHNICAL_INNOVATIONS.md  Vault.sol  Vault.t.sol  VaultEdgeCases.t.sol  VaultFuzzing.t.sol  VaultSecurityTests_README.md  VaultTestRunner.sol  build.rs  comparison.md  modularSVM.md
.cargo/: config.toml
benches/: integration_benchmarks.rs  svm_performance.rs
blog/: crypto-twitter-announcement.md  marketing-overview.md  technical-architecture.md
docs/: integration.md
examples/: enhanced_exex_example.rs  integrated_agent_example.rs
implementation1/: main.rs  readme.md  tests.rs
implementation2/: main.rs  readme.md  tests.rs
proto/: agent_tx.proto  exex_service.proto  messages.proto
src/: enhanced_exex.rs  enhanced_processor.rs  errors.rs  lib.rs  logging.rs  rag_integration.rs  state_sync.rs  stubs.rs  svm.rs
src/agent/: agent_pool.rs  agent_tx.rs  intent_classifier.rs  mod.rs  pre_execution_hook.rs
src/ai/: context_manager.rs  decision_engine.rs  mod.rs  rag_adapter.rs  traits.rs
src/ai/context/: cache.rs  mod.rs  preprocessing.rs
src/ai/embeddings/: batch.rs  mod.rs  realtime.rs
src/ai/knowledge_graph/: mod.rs  svm_integration.rs
src/ai/memory/: agent_integration.rs  mod.rs  reorg_handling.rs  rollback.rs
src/ai/rag/: agent_context.rs  mod.rs
src/batch/: mod.rs  processing.rs
src/config/: mod.rs  shared.rs
src/deployment/: health.rs  mod.rs
src/grpc/: client.rs  connection_pool.rs  health.rs  mod.rs  server.rs
src/inter_exex/: bus.rs  messages.rs  mod.rs  protocol.rs  svm_messages.rs
src/optimization/: caching.rs  mod.rs  query.rs
src/orchestration/: mod.rs  parallel_executor.rs  rollback_manager.rs  tool_executor.rs
src/sync/: mod.rs  protocol.rs  state_sync.rs
src/vector_store/: consistency.rs  mod.rs  recovery.rs
tests/: comprehensive_integration_tests.rs  integration_tests.rs  unit_tests.rs
tests/integration/: cross_exex_tests.rs  mod.rs
