[package]
name = "monmouth-svm-exex"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Solana VM Execution Extension for Reth - enabling SVM execution within Ethereum nodes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/monmouth-svm-exex"
keywords = ["ethereum", "solana", "reth", "exex", "blockchain"]
categories = ["cryptography::cryptocurrencies"]

[[bin]]
name = "implementation1"
path = "implementation1/main.rs"

[[bin]]
name = "implementation2"  
path = "implementation2/main.rs"

[dependencies]
# Reth dependencies for Ethereum node functionality
reth = { git = "https://github.com/paradigmxyz/reth" }
reth-exex = { git = "https://github.com/paradigmxyz/reth" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth" }

# Solana SVM dependencies for standalone SVM integration
solana-svm = "2.0"
solana-sdk = "1.18"
solana-program = "1.18"

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"

# Error handling and utilities
eyre = "0.6"
anyhow = "1.0"
thiserror = "1.0"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Collections and utilities
dashmap = "5.0"
parking_lot = "0.12"
lru = "0.12"
rayon = "1.7"
async-trait = "0.1"

# AI Agent specific dependencies
reqwest = { version = "0.11", features = ["json", "stream"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Vector operations and memory
ndarray = "0.15"
faiss = { version = "0.12", optional = true }

# Decision making and planning
petgraph = "0.6"
clap = { version = "4.0", features = ["derive"] }

# Configuration and environment
config = "0.14"
dotenv = "0.15"

[dev-dependencies]
# Testing dependencies
tokio-test = "0.4"
proptest = "1.0"
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
futures-util = "0.3"
tracing-test = "0.2"
rand = "0.8"

[features]
default = ["full"]
full = ["testing", "metrics", "ai-agents"]
testing = []
metrics = []
ai-agents = ["faiss"]
vector-db = ["faiss"]
minimal = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
panic = "unwind"

