[package]
name = "monmouth-svm-exex"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Solana VM Execution Extension for Reth - enabling SVM execution within Ethereum nodes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/monmouth-svm-exex"
keywords = ["ethereum", "solana", "reth", "exex", "blockchain"]
categories = ["cryptography::cryptocurrencies"]

[[bin]]
name = "implementation1"
path = "implementation1/main.rs"
required-features = ["solana"]

[[bin]]
name = "implementation2"  
path = "implementation2/main.rs"
required-features = ["solana"]

[dependencies]
# Reth dependencies for Ethereum node functionality - v1.5.1 release (commit dbe7ee9c)
reth = { git = "https://github.com/paradigmxyz/reth", rev = "dbe7ee9c" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", rev = "dbe7ee9c" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "dbe7ee9c" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "dbe7ee9c" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "dbe7ee9c" }

# Solana SVM dependencies for standalone SVM integration - temporarily disabled for compilation
# solana-svm = "1.17"
# solana-sdk = "1.17"
# solana-program = "1.17"

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"

# Error handling and utilities
eyre = "0.6"
anyhow = "1.0"
thiserror = "1.0"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Collections and utilities
dashmap = "5.0"
parking_lot = "0.12"
lru = "0.12"
rayon = "1.7"
async-trait = "0.1"

# AI Agent specific dependencies
reqwest = { version = "0.11", features = ["json", "stream"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Vector operations and memory
ndarray = "0.15"
faiss = { version = "0.12", optional = true }

# Additional dependencies needed by the implementation - using reth v1.5.1 compatible versions
alloy-primitives = "1.2.0"
# alloy-rpc-types = "0.2"  # Will add back after basic compilation works

# Solana integration dependencies
solana-program = { version = "1.17", optional = true }
solana-sdk = { version = "1.17", optional = true }
solana-runtime = { version = "1.17", optional = true }

# Decision making and planning
petgraph = "0.6"
clap = { version = "4.0", features = ["derive"] }

# Text processing
regex = "1.10"

# Configuration and environment
config = "0.14"
dotenv = "0.15"
toml = "0.8"
num_cpus = "1.16"

# gRPC and protobuf
tonic = "0.12"
prost = "0.13"
tonic-build = { version = "0.12", optional = true }

# Merkle tree and cryptography
rs_merkle = "1.4"
blake3 = "1.5"
base64 = "0.21"

# Performance and parallelism
crossbeam = "0.8"
crossbeam-channel = "0.5"

# Bridge integrations (optional)
# wormhole-sdk = { version = "0.1", optional = true }
# axelar-sdk = { version = "0.1", optional = true }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
# Testing dependencies
tokio-test = "0.4"
proptest = "1.0"
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
futures-util = "0.3"
tracing-test = "0.2"
rand = "0.8"

[features]
default = ["standard"]
standard = ["testing", "metrics", "ai-agents", "grpc"]
full = ["testing", "metrics", "ai-agents", "solana", "grpc", "bridges"]
testing = []
metrics = []
ai-agents = ["faiss"]
solana = ["solana-program", "solana-sdk", "solana-runtime"]
vector-db = ["faiss"]
minimal = []
grpc = []
bridges = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
panic = "unwind"

